Refactored DefaultEpisodicMemory so that it support working memory element list. Also addressed some of the issues as reported by analyzer